<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_logger</name>
  <version>0.0.1</version>
  <description>Pakiet do logowania zsynchronizowanych danych z sensorów do pliku CSV.</description>
  <maintainer email="adam01wroblewski@gmail.com">Twoje Imie</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>gps_rtk_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>